turning, travelling working. Need to fix the overlap travel causing loops